--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -69,9 +69,34 @@ input, textarea, select {
   src: url(../fonts/jost-book.woff2), url(../fonts/jost-book.woff);
 }
 body {
-  background-color: blue;
+  background-color: #f70201;
   color: #ffffff;
   font-family: "Jost";
+  font-size: 24px;
+  line-height: 1.5;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 600px) {
+  body {
+    height: 100%;
+  }
+}
+
+section {
+  width: 500px;
+}
+@media (max-width: 600px) {
+  section {
+    width: 80%;
+    font-size: 16px;
+  }
+}
+section p {
+  margin: 24px 0 0 0;
 }
 
 /*# sourceMappingURL=app.css.map */
